# gst-rtsp-server

./: configure.ac
bindings/vala/: GstRtspServer-1.0.metadata  Makefile.am
gst/rtsp-server/: rtsp-client.c  rtsp-media-factory-uri.c  rtsp-media-factory.c  rtsp-media-mapping.c  rtsp-media.c  rtsp-media.h  rtsp-server.c  rtsp-session.c  rtsp-session.h
